Intégration of discovery and register server

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>gateway-api</module>
         <module>register-recovery-service</module>
+        <module>Configuration service</module>
     </modules>
 </project>
 
